...
                                    </constraint>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="nyN-SW-XPZ">
                                        <variation key="heightClass=compact-widthClass=regular" constant="120"/>
                                        <variation key="heightClass=regular-widthClass=regular" constant="160"/>
                                    </constraint>
                                </constraints>
                                <state key="normal" title="SELECT"/>
                                <variation key="heightClass=regular-widthClass=regular">
                                    <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                </variation>
                                <connections>
                                    <action selector="selectButtonTapped:" destination="gVS-aK-b8D" eventType="touchUpInside" id="ecX-o7-4zj"/>
                                </connections>
...
                                    </constraint>
                                    <constraint firstAttribute="width" constant="30" id="haE-bS-I4r">
                                        <variation key="heightClass=compact-widthClass=regular" constant="45"/>
                                        <variation key="heightClass=regular-widthClass=regular" constant="60"/>
                                    </constraint>
                                </constraints>
                                <state key="normal" backgroundImage="reset"/>
                                <connections>
                                    <action selector="resetRotationButtonTapped:" destination="gVS-aK-b8D" eventType="touchUpInside" id="Q0R-Ib-lht"/>
                                </connections>
                            </button>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YOn-U6-vU8" customClass="ButtonBackgroundView" customModule="Gridy" customModuleProvider="target">
                                <rect key="frame" x="213" y="418" width="34" height="34"/>
...
