...
                                <constraints>
                                    <constraint firstAttribute="width" constant="120" id="RRB-Zl-uwJ">
                                        <variation key="heightClass=regular-widthClass=regular" constant="240"/>
                                    </constraint>
                                    <constraint firstAttribute="width" secondItem="ytc-Vk-itk" secondAttribute="height" multiplier="3:2" id="rsa-Yp-ySy"/>
                                </constraints>
                                <state key="normal" title="Gridy Button"/>
                                <connections>
                                    <action selector="gridyButtonTapped:" destination="ZyC-cO-ZGp" eventType="touchUpInside" id="Kyj-Vy-ZIu"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
